@@ -10,10 +10,10 @@ Version 2.19
 * The following bugs are resolved with this release:
 
   13985, 14155, 14547, 14699, 15048, 15400, 15427, 15522, 15531, 15532,
-  15608, 15609, 15610, 15640, 15681, 15736, 15748, 15749, 15754, 15797,
-  15844, 15849, 15855, 15856, 15857, 15859, 15867, 15886, 15887, 15890,
-  15892, 15893, 15895, 15897, 15905, 15909, 15919, 15921, 15923, 15939,
-  15963, 15966.
+  15608, 15609, 15610, 15640, 15681, 15736, 15748, 15749, 15754, 15760,
+  15797, 15844, 15849, 15855, 15856, 15857, 15859, 15867, 15886, 15887,
+  15890, 15892, 15893, 15895, 15897, 15905, 15909, 15919, 15921, 15923,
+  15939, 15963, 15966, 15988.
 
 * CVE-2012-4412 The strcoll implementation caches indices and rules for
   large collation sequences to optimize multiple passes.  This cache
